<!--
  ~ Copyright 2017 Coffee and Cream Studios
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="app_name">Glucose Guide</string>

  <string name="close_app">Close Glucose Guide</string>
  <string name="close_confirmation">Do you really want to close Glucose Guide?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>

  <!-- Navigation Drawer Items -->
  <string name="navigation_list">List</string>
  <string name="navigation_statistics">Statistics</string>
  <string name="navigation_settings">Settings</string>
  <string name="grade_detail">This is a grade of your blood glucose levels for the past three days.</string>

  <!-- NewEntryActivity and EditEntryActivity strings -->
  <string name="new_entry_date_and_time_label">Date and Time:</string>
  <string name="new_entry_blood_glucose_label">Blood Glucose:</string>
  <string name="new_entry_carbohydrates_label">Carbohydrates:</string>
  <string name="new_entry_insulin_label">Insulin:</string>
  <string name="time">Time</string>
  <string name="date">Date</string>
  <string name="save">Save</string>
  <string name="update">Update</string>
  <string name="cancel">Cancel</string>
  <string name="edit_entry_toolbar">Edit entry</string>
  <string name="status">Status</string>
  <string name="delete_single_entry">Delete this entry?</string>
  <string name="delete_single_entry_message">Are you sure you want to delete this entry?</string>
  <string name="reminder">Want us to remind you to check your sugar?</string>
  <string name="alarm_reminder">Reminder Time</string>
  <string name="reminder_content">Time to check your sugar!</string>
  <string name="entry_deleted">Entry deleted</string>
  <string name="suggested_insulin">Suggested Insulin dosage:</string>

  <!-- List onOptions items -->
  <string name="sort">Sort</string>
  <string name="sort_from_newest">Newest to oldest</string>
  <string name="sort_from_oldest">Oldest to newest</string>
  <string name="show_breakfast_only">Show Breakfast Only</string>
  <string name="show_lunch_only">Show Lunch Only</string>
  <string name="show_dinner_only">Show Dinner Only</string>
  <string name="show_sick_only">Show Sick Only</string>
  <string name="show_exercise_only">Show Exercise Only</string>
  <string name="show_sweets_only">Show Sweets Only</string>

  <!-- Misc -->
  <string name="blood_glucose">Blood Glucose</string>
  <string name="carbohydrates">Carbohydrates</string>
  <string name="insulin">Insulin</string>
  <string name="dash">-</string>
  <string name="create_entry">Create a new log entry!</string>

  <string name="mailto" translatable="false">mailto:coffeeandcreamstudios@gmail.com</string>
  <string name="emailSubject" translatable="false">Glucose Guide feedback</string>

  <!-- units of measurement-->
  <string name="blood_glucose_measurement">mg/dl</string>
  <string name="carbs_measurement">grams</string>
  <string name="insulin_measurement">units</string>

  <!-- Toast strings -->
  <string name="list_item_short_click">Long click to edit entry!</string>
  <string name="no_glucose_toast">Please enter your current glucose.</string>

  <!--Settings Strings-->
  <string name="ui">UI</string>
  <string name="data">Data</string>
  <string name="danger_zone">Danger Zone</string>
  <string name="export_description">Export entries to spreadsheet in Downloads folder</string>
  <string name="export">Export</string>
  <string name="settings_dark_mode">Use dark mode:</string>
  <string name="settings_glucose_goal_section">Target range of glucose</string>
  <string name="settings_hypoglycemic">Below this your sugar is low:</string>
  <string name="settings_hyperglycemic">Above this your sugar is high:</string>
  <string name="settings_delete_section">Reboot</string>
  <string name="settings_delete_entries">Delete all Entries?</string>
  <string name="delete">Delete</string>
  <string name="feedback">Feedback</string>
  <string name="all_deleted">All entries deleted</string>
  <string name="treatment">Treatment</string>
  <string name="settings">Settings</string>
  <string name="bolus_ratio_label">Bolus Ratio</string>
  <string name="bolus_ratio_description">How many carbs = 1 unit of insulin?</string>
  <string name="military_time_description">Use 24 hour format:</string>

  <!--Image descriptions -->
  <string name="blood_glucose_image">Blood Glucose Image</string>
  <string name="carbs_image">Carbohydrates image</string>
  <string name="insulin_image">Insulin Image</string>

  <!-- Graph Fragment strings-->
  <string name="today">Today</string>
  <string name="yesterday">Yesterday</string>

  <!-- Statistics fragments strings -->
  <string name="average">Average blood glucose:</string>
  <string name="highest_of_all">Highest blood glucose:</string>
  <string name="lowest_of_all">Lowest blood glucose:</string>
  <string name="no_data">No data to calculate</string>
  <string name="estimated_a1c">Estimated A1C:</string>
  <string name="app_icon">App Icon</string>
  <string name="support_desc">If this app has helped you manage your diabetes better and you would like to support the development of it, please feel free to become a patron to help keep the development of the app alive and well. \n \n I myself am a diabetic and want to help as many people as possible, and through this app I hope to be able to. </string>
  <string name="support">Support</string>
  <string name="patreon">Become a supporter!</string>
  <string name="navigation_grade">Grade</string>
  <string name="log">Log</string>
  <string name="over_grade_label">Overall grade from the last three days:</string>
  <string name="example_item_list_description">This is an example entry! Make an entry of your own to make me disappear!</string>
  <string name="status_image">Status Image</string>
  <string name="time_example" translatable="false">12:33 pm</string>
  <string name="insulin_example" translatable="false">4.4</string>
  <string name="carbs_example" translatable="false">44</string>
  <string name="blood_glucose_example" translatable="false">144</string>
  <string name="arrow_symbol"><![CDATA[>]]></string>
  <string name="graph_desc">Graph of glucose over last three days</string>

  <array name="statistic_tab_titles">
    <item name="three_days">3 Days</item>
    <item name="seven_days">7 Days</item>
    <item name="one_month">One Month</item>
    <item name="three_months">Three Months</item>
    <item name="all">All</item>
  </array>

  <array name="status_selection">
    <item>None</item>
    <item>Breakfast</item>
    <item>Lunch</item>
    <item>Dinner</item>
    <item>Bedtime</item>
    <item>Sweets</item>
    <item>Sick</item>
    <item>Exercise</item>
  </array>
</resources>
