<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Coffee and Cream Studios
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/sort_list"
    android:orderInCategory="100"
    android:title="@string/sort"
    app:showAsAction="never">
    <menu>
      <item
        android:id="@+id/list_sort_from_newest"
        android:title="@string/sort_from_newest" />
      <item
        android:id="@+id/list_sort_from_oldest"
        android:title="@string/sort_from_oldest" />
    </menu>
  </item>
  <item
    android:id="@+id/status_selection"
    android:orderInCategory="200"
    android:title="@string/status"
    app:showAsAction="never">
    <menu>
      <item
        android:id="@+id/list_status_breakfast"
        android:title="@string/show_breakfast_only" />
      <item
        android:id="@+id/list_status_lunch"
        android:title="@string/show_lunch_only" />
      <item
        android:id="@+id/list_status_dinner"
        android:title="@string/show_dinner_only" />
      <item
        android:id="@+id/list_status_sick"
        android:title="@string/show_sick_only" />
      <item
        android:id="@+id/list_status_exercise"
        android:title="@string/show_exercise_only" />
      <item
        android:id="@+id/list_status_sweets"
        android:title="@string/show_sweets_only" />
    </menu>
  </item>
</menu>
