<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" android:elevation="5dp" app:elevation="5dp"
        android:background="?attr/colorPrimary" />


    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_below="@+id/toolbar" android:orientation="vertical"
        android:padding="16dp" android:layout_above="@+id/linearView"
        android:layout_marginTop="@dimen/fab_margin">
        <!--Date and Time-->
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView
                android:id="@+id/new_entry_date_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_entry_date_and_time_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/new_entry_date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/date"
                android:inputType="date"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/new_entry_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/time"
                android:inputType="datetime"
                android:textSize="16sp" />
        </LinearLayout>

        <!--Glucose-->
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView
                android:id="@+id/new_entry_glucose_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_entry_blood_glucose_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/new_entry_blood_glucose_level"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:inputType="number"
                android:maxLength="4"/>

            <TextView
                android:labelFor="@+id/new_entry_blood_glucose_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_glucose_measurement"
                android:textSize="18sp" />
        </LinearLayout>

        <!--Carbohydrates-->
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView
                android:id="@+id/new_entry_carbs_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_entry_carbohydrates_label"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/new_entry_carbohydrates_amount"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"/>

            <TextView
                android:labelFor="@+id/new_entry_carbohydrates_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbs_measurement"
                android:textSize="18sp" />

        </LinearLayout>

        <!--Insulins-->
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView
                android:id="@+id/new_entry_insulin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_entry_insulin_label"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/new_entry_insulin_units"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="8dp"
                android:inputType="numberDecimal"
                android:maxLength="4" />

            <TextView
                android:labelFor="@+id/new_entry_insulin_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insulin_measurement"
                android:textSize="18sp"/>

        </LinearLayout>
    </LinearLayout>



    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:background="?attr/colorPrimary" style="?attr/buttonBarButtonStyle"
        android:layout_alignParentBottom="true" android:id="@+id/linearView">

        <Button
            android:id="@+id/cancelBtn"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/saveBtn"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>

</RelativeLayout>