<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Coffee and Cream Studios
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="8dp"
  android:layout_marginLeft="16dp"
  android:layout_marginRight="16dp"
  android:layout_marginTop="8dp"
  android:clickable="true"
  android:focusable="true"
  android:foreground="?android:attr/selectableItemBackground"
  app:cardCornerRadius="5dp"
  app:cardElevation="@dimen/item_card_elevation">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
      android:id="@+id/item_list_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:fontFamily="@font/avenir_demi_bold"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="Today" />

    <TextView
      android:id="@+id/item_list_time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="4dp"
      android:fontFamily="@font/avenir_demi_bold"
      android:textSize="14sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/item_list_date"
      tools:text="12:20 pm" />

    <ImageView
      android:id="@+id/status_image"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="16dp"
      android:contentDescription="@string/status_image"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/item_list_blood_glucose"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:fontFamily="@font/avenir_demi_bold"
      android:text="@string/dash"
      android:textSize="18sp"
      app:layout_constraintBaseline_toBaselineOf="@+id/blood_glucose_label"
      app:layout_constraintEnd_toStartOf="@+id/blood_glucose_measurement_label"
      tools:text="144" />

    <TextView
      android:id="@+id/blood_glucose_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="12dp"
      android:alpha="0.7"
      android:fontFamily="@font/avenir_medium"
      android:text="@string/blood_glucose"
      android:textSize="14sp"
      app:layout_constraintStart_toEndOf="@+id/item_list_image_blood_sugar"
      app:layout_constraintTop_toBottomOf="@+id/item_list_time" />

    <TextView
      android:id="@+id/carbohydrates_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="12dp"
      android:alpha="0.7"
      android:fontFamily="@font/avenir_medium"
      android:text="@string/carbohydrates"
      android:textSize="14sp"
      app:layout_constraintStart_toEndOf="@+id/item_list_image_carbs"
      app:layout_constraintTop_toBottomOf="@+id/item_list_image_blood_sugar" />

    <TextView
      android:id="@+id/insulin_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="12dp"
      android:alpha="0.7"
      android:fontFamily="@font/avenir_medium"
      android:text="@string/insulin"
      android:textSize="14sp"
      app:layout_constraintStart_toEndOf="@+id/item_list_insulin_image"
      app:layout_constraintTop_toBottomOf="@+id/item_list_image_carbs" />

    <TextView
      android:id="@+id/blood_glucose_measurement_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:fontFamily="@font/avenir_demi_bold"
      android:text="@string/blood_glucose_measurement"
      app:layout_constraintBaseline_toBaselineOf="@+id/item_list_blood_glucose"
      app:layout_constraintEnd_toEndOf="parent" />

    <TextView
      android:id="@+id/item_list_carbohydrates"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:fontFamily="@font/avenir_demi_bold"
      android:text="@string/dash"
      android:textSize="18sp"
      app:layout_constraintBaseline_toBaselineOf="@+id/carbohydrates_label"
      app:layout_constraintEnd_toStartOf="@+id/carbs_measurement_label"
      tools:text="44" />

    <TextView
      android:id="@+id/carbs_measurement_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:fontFamily="@font/avenir_demi_bold"
      android:text="@string/carbs_measurement"
      app:layout_constraintBaseline_toBaselineOf="@+id/item_list_carbohydrates"
      app:layout_constraintEnd_toEndOf="parent" />

    <TextView
      android:id="@+id/insulin_measurement_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:fontFamily="@font/avenir_demi_bold"
      android:text="@string/insulin_measurement"
      app:layout_constraintBaseline_toBaselineOf="@+id/item_list_insulin"
      app:layout_constraintEnd_toEndOf="parent" />

    <TextView
      android:id="@+id/item_list_insulin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:fontFamily="@font/avenir_demi_bold"
      android:text="@string/dash"
      android:textSize="18sp"
      app:layout_constraintBaseline_toBaselineOf="@+id/insulin_label"
      app:layout_constraintEnd_toStartOf="@+id/insulin_measurement_label"
      tools:text="4.4" />

    <ImageView
      android:id="@+id/item_list_insulin_image"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:contentDescription="@string/insulin_image"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/item_list_image_carbs"
      app:srcCompat="?attr/insulin_image" />

    <ImageView
      android:id="@+id/item_list_image_carbs"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:contentDescription="@string/carbs_image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/item_list_image_blood_sugar"
      app:srcCompat="?attr/carbs_image" />

    <ImageView
      android:id="@+id/item_list_image_blood_sugar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/item_list_time"
      app:srcCompat="?attr/blood_glucose_image" />

  </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>